clusters/rpi/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring 
  name: grafana-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: grafana-ingress
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    -  grafana.mgsds.com
    secretName: grafana.mgsds.com-tls
  rules:
  - host: grafana.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: prometheus-ingress
spec:
  ingressClassName: external-nginx
  rules:
  - host: prometheus.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 8080
